<resources>
    <string name="app_name">Eros</string>
    <string name="welcome_to_eros">Welcome to Eros!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">LOGIN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="new_here_sign_up">New here? Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">sign up</string>
    <string name="second_name">Second Name</string>
</resources>